--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -22,7 +22,7 @@
         <h1 class="mb-4">메인 페이지</h1>
         <p>이곳은 인덱스 페이지의 본문입니다.<br>
             게시글을 확인하거나 검색 기능을 사용해보세요.</p>
-        <a href="/posts" class="btn btn-primary mt-3">게시글 보기로 이동</a>
+        <a href="/post" class="btn btn-primary mt-3">게시글 보기로 이동</a>
     </div>
 </main>
 
