--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -32,7 +32,7 @@
                 <!-- 왼쪽 메뉴 -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/posts">게시글 보기</a>
+                        <a class="nav-link" href="/post">게시글 보기</a>
                     </li>
                 </ul>
 
